tests/snapshots/snapshot_tests__execution_request_snapshot.snap
---
source: tests/snapshot_tests.rs
assertion_line: 19
expression: request
---
MavenExecutionRequest {
    base_directory: "/home/user/project",
    goals: [
        "clean",
        "compile",
        "test",
    ],
    active_profiles: [
        "dev",
    ],
    system_properties: {
        "maven.compiler.target": "11",
        "maven.compiler.source": "11",
    },
    user_properties: {},
    show_errors: false,
    reactor_active: true,
    settings: None,
    pom_file: Some(
        "/home/user/project/pom.xml",
    ),
}
