tests/snapshots/snapshot_tests__execution_request_with_many_properties_snapshot.snap
---
source: tests/snapshot_tests.rs
assertion_line: 37
expression: request
---
MavenExecutionRequest {
    base_directory: "/project",
    goals: [],
    active_profiles: [],
    system_properties: {
        "property.0": "value-0",
        "property.3": "value-3",
        "property.1": "value-1",
        "property.2": "value-2",
        "property.4": "value-4",
    },
    user_properties: {},
    show_errors: false,
    reactor_active: true,
    settings: None,
    pom_file: None,
}
